dev/phpunit/fixtures/pass/disallow-null-coalesece-in-conditions.php
<?php
/** @noinspection ALL */

0 !== $update_id ? 'updated' : 'added';
